Fix Hercules blend mode so that adjacent lit pixels are brighter again [https://github.com/joncampbell123/dosbox-x/issues/5064]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
 Next:
+  - Hercules/MDA and InColor integration broke the Hercules blend mode
+    render, fix the render so that adjacent lit pixels are brighter
+    again. (joncampbell123).
   - Fix "VRD" debugger command bug that didn't properly render out the
     rest of the VGA display frame. (joncampbell123).
   - Fixed debugger mapper shortcut bug where entering the debugger
