--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+Next
+  - Fixed update-version-number script to patch all *.iss files, not 
+    just the specific one it did before, to ensure future releases have
+    correct version numbers. (joncampbell123).
+  - Updated Nuked-OPL3 code to nukeykt/Nuked-OPL3@cfedb09 (StevenSYS) 
+  - Updated SDL2 library to 2.30.4 (maron2000)
+  - Fixed TTF mode didn't change to graphic mode when machine = Hercules
+    (maron2000)
+
 2024.07.01
   - Correct Hercules InColor memory emulation. Read and write planar
     behavior was incorrect due to a misunderstanding of available
