--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 NEXT
-  - add "[dos] automount drive directories" option, this will mount
-    existing drive directories, from C drive to Y drive (aybe).
+  - add option "[dos] automount drive directories" for Windows builds,
+    this will mount existing drive directories from C to Y drive (aybe).
 2024.07.01
   - Correct Hercules InColor memory emulation. Read and write planar
     behavior was incorrect due to a misunderstanding of available
