--- a/CHANGELOG
+++ b/CHANGELOG
@@ -21,7 +21,14 @@ NEXT
   - Updated SDL2 library to 2.30.4 (maron2000)
   - Fixed TTF mode didn't change to graphic mode when machine = Hercules
     (maron2000)
-  - CFGTOOL: more Windows 3.1 styling, general UX/UI improvements (aybe).
+  - Configuration tool: (aybe)
+    - more Windows 3.1 styling: buttons, colors, focus, layout
+    - enhance main window layout, it is now visible in its entirety
+    - fix layout issues, off by one in rectangle drawing functions
+    - fix 'list iterators incompatible' when pressing the Tab key
+    - properties/help: sorted alphabetically, mouse wheel scrollable
+    - remove few rendundant labels, adjust names of some others
+    - retain 'show advanced options' state throughout session
 
 2024.07.01
   - Correct Hercules InColor memory emulation. Read and write planar
