--- a/contrib/translations/de/de_DE.lng
+++ b/contrib/translations/de/de_DE.lng
@@ -584,11 +584,13 @@ Aktuell eingehängte Laufwerke:
 
 .
 :PROGRAM_MOUNT_NOT_FORMATTED
-Drive not formatted. Format it before accessing the drive.
+Laufwerk nicht formatiert. Bitte formatiteren,
+bevor darauf zugegriffen wird.
 
 .
 :PROGRAM_MOUNT_UNSUPPORTED_EXT
-Unsupported extension %s: Mounted as raw IMG image.
+Nicht unterstützte Erweiterung: %s 
+Als rohes IMG-Image eingehangen.
 
 .
 :PROGRAM_IMGMOUNT_STATUS_FORMAT
@@ -1055,6 +1057,10 @@ Beispiele:
 Kann von Laufwerk %c nicht booten.
 
 .
+:PROGRAM_BOOT_IMAGE_MOUNTED
+Disketten-Image(s) bereits eingehangen.
+
+.
 :PROGRAM_BOOT_IMAGE_OPEN
 Öffne Image-Datei: %s
 
@@ -1071,6 +1077,9 @@ Verfügbare PCjr-Cartridge-Kommandos:%s
 .
 :PROGRAM_BOOT_CART_NO_CMDS
 Keine PCjr-Cartridge-Kommandos gefunden
+.
+:PROGRAM_BOOT_BOOTING
+Boote von Laufwerk 
 .
 :PROGRAM_LOADROM_HELP
 Lädt die angegebene ROM-Image-Datei für Video-BIOS oder IBM BASIC.
@@ -1288,12 +1297,13 @@ Usage: ←[34;1mIMGMAKE [file] [-t type] [[-size size] | [-chs geometry]] [-spc]
      hd_250: 250MB-Image, hd_520: 520MB-Image, hd_1gig: 1GB-Image
      hd_2gig: 2GB-Image, hd_4gig: 4GB-Image, hd_8gig: 8GB-Image
      hd_st251: 40MB-Image, hd_st225: 20MB-Image (Geometrie alter Laufwerke)
-    ←[33;1mEigenes Festplattenimage:←[0m hd (benötigt -size oder -chs)
-  -size: Größe eines eigenen Festplattenimages in MB.
+    ←[33;1mEigenes Festplattenimage:←[0m hd vhd (benötigt -size oder -chs)
+  -size: Größe eines eigenen Festplattenimages in MB (vhd: bis zu 2088960).
   -chs: Geometrie in Zylindern (1-1023),Köpfen (1-255),Sektoren (1-63).
   -nofs: Diesen Parameter für ein leeres Image anhängen.
   -force: Image-Datei überschreiben, wenn bereits vorhanden.
   -bat: .bat-Datei mit IMGMOUNT-Kommando für dieses Image erstellen.
+  -chs / -lba: Nutze Partitionscode für FAT Dateisystem für C/H/S oder LBA Geometrie.
   -fat: FAT-Dateisystemtyp (12, 16, oder 32).
   -spc: Sektoren pro Cluster überschreiben. Muss Potenz von 2 sein.
   -fatcopies: Überschreibe Anzahl von FAT-Tabellen-Kopien.
@@ -1306,6 +1316,7 @@ Ein paar Beispiele für IMGMAKE:
   ←[32;1mIMGMAKE -t fd←[0m                   - erstelle 1.44MB Diskette ←[33;1mIMGMAKE.IMG←[0m
   ←[32;1mIMGMAKE -t fd_1440 -force←[0m       - erstelle und erzwinge Diskette ←[33;1mIMGMAKE.IMG←[0m
   ←[32;1mIMGMAKE dos.img -t fd_2880←[0m      - erstelle 2.88MB Diskette namens dos.img
+  ←[32;1mIMGMAKE new.vhd -t vhd -size 520←[0m- erstelle 520MB Dynamische VHD namens new.vhd
   ←[32;1mIMGMAKE ~/disk.img -t hd -size 50←[0m       - erstelle 50MB HDD-Image ~/disk.img
   ←[32;1mIMGMAKE ~/disk.img -t hd_520 -nofs←[0m      - erstelle 520MB leeres HDD-Image
   ←[32;1mIMGMAKE ~/disk.img -t hd_2gig -fat 32←[0m   - erstelle 2GB FAT32 HDD-Image
@@ -1334,6 +1345,10 @@ Erstelle Image-Datei "%s" mit %u Zylindern, %u Köpfen und %u Sektoren.
 
 
 Kann Diskette nicht lesen.
+.
+:PROGRAM_IMGMAKE_BADSIZE
+Falsche -size oder -chs Argumente.
+
 .
 :PROGRAM_KEYB_INFO
 Codepage %i geladen
@@ -1383,6 +1398,37 @@ Keine Codepage-Datei für Layout %s oder Datei ungültig
 
 
 .
+:INT21_6523_YESNO_CHARS
+jn
+.
+:PROGRAM_LABEL_HELP
+Erstellt, ändert, oder löscht das Label eines Laufwerks.
+
+LABEL [drive:][label]
+
+  [drive:]○Buchstabe des Laufwerks
+  [label]○Label des Laufwerks
+
+.
+:PROGRAM_LABEL_DELETE
+Label löschen (J/N)? 
+.
+:PROGRAM_LABEL_TOOLONG
+Label zu lang (mehr als 11 Zeichen).
+
+.
+:PROGRAM_LABEL_BADCHARS
+Label hat ungültige Zeichen.
+
+.
+:PROGRAM_LABEL_VOLUMEIS
+Laufwerk %c ist %s
+
+.
+:PROGRAM_LABEL_NOLABEL
+Laufwerk %c hat kein Label
+
+.
 :PROGRAM_MODE_USAGE
 Konfiguriert Systemgeräte.
 
@@ -1397,6 +1443,125 @@ Ungültige(r) Parameter.
 .
 :PROGRAM_PORT_INVALID_NUMBER
 Eine Port-Nummer zwischen 1 und 9 muss angegeben werden.
+
+.
+:PROGRAM_VHDMAKE_WRITERR
+Konnte auf neues VHD-Image "%s" nicht schreiben, Abbruch.
+
+.
+:PROGRAM_VHDMAKE_REMOVEERR
+Konnte Datei "%s" nicht löschen
+
+.
+:PROGRAM_VHDMAKE_RENAME
+Das neu erstellte VHD-Image muss manuell umbenannt werden.
+
+.
+:PROGRAM_VHDMAKE_SUCCESS
+Neues VHD-Image erfolgreich erstellt.
+Es kann mit ←[34;1mIMGMOUNT←[0m eingehangen werden.
+
+.
+:PROGRAM_VHDMAKE_ERROPEN
+Fehler, konnte Image "%s" nicht öffnen.
+
+.
+:PROGRAM_VHDMAKE_BADSIZE
+Ungültige VHD-Größe angegeben, Abbruch!
+
+.
+:PROGRAM_VHDMAKE_FNEEDED
+Ein existierendes VHD-Image kann nicht ohne -f option
+still überschriben werden !
+
+.
+:PROGRAM_VHDMAKE_BADPARENT
+Übergeordnetes VHD-Image "%s" kann nicht
+zum Verknüpfen geöffnet werden, Abbruch!
+
+.
+:PROGRAM_VHDMAKE_NOINFO
+Konnte keine Infos für "%s" abfragen.
+
+.
+:PROGRAM_VHDMAKE_BLOCKSTATS
+ mit %d/%d Blöcken alloziiert.
+
+.
+:PROGRAM_VHDMAKE_INFO
+VHD "%s" Typ ist %s.
+Seine virtuelle Größe beträgt %.02f MB
+.
+:PROGRAM_VHDMAKE_CANTMERGE
+%s ist identisch, kann nicht zusammenfassen!
+
+.
+:PROGRAM_VHDMAKE_MERGEREPORT
+%d Sektoren in %d Blöcken von "%s"
+zu "%s" zusammengefasst.
+
+.
+:PROGRAM_VHDMAKE_MERGENODELETE
+Konnte Schnappschuss "%s" nicht löschen, 
+bitte manuell erledigen!
+.
+:PROGRAM_VHDMAKE_MERGEOKDELETE
+Schnappschuss VHD zusammengefasst und gelöscht.
+
+.
+:PROGRAM_VHDMAKE_MERGEFAILED
+Fehler beim Zusammenfassen, Abbruch!
+
+.
+:PROGRAM_VHDMAKE_MERGEWARNCORRUPTION
+ Inhalte vom übergeordneten "%s" 
+könnten korrumpiert sein!
+
+.
+:PROGRAM_VHDMAKE_ABSPATH_WIN
+Warnung: Ein absoluter Pfad zur übergeordneten Datei
+schränkt die Portabilität zu Windows ein.
+Bitte einen relativen Pfad zur Differenz-Image-Datei
+angeben!
+
+.
+:PROGRAM_VHDMAKE_ABSPATH_UX
+FEHLER: Ein absoluter Pfad zur übergeordneten Datei
+schränkt die Portabilität ein.
+Bitte einen relativen Pfad zur Differenz-Image-Datei
+angeben!
+
+.
+:PROGRAM_VHDMAKE_HELP
+Erstellt dynamisches oder Differenz-VHD-Image,
+konvertiert rohe Images in fixes VHD,
+zeigt Infos über VHD-Images und fasst sie zusammen.
+←[32;1mVHDMAKE←[0m [-f] new.vhd Größe[BKMGT]
+←[32;1mVHDMAKE←[0m ←[34;1m-convert←[0m raw.hdd new.vhd
+←[32;1mVHDMAKE←[0m [-f] ←[34;1m-link←[0m parent.vhd new.vhd
+←[32;1mVHDMAKE←[0m ←[34;1m-merge←[0m delta.vhd
+←[32;1mVHDMAKE←[0m ←[34;1m-info←[0m a.vhd
+ -c | -convert  konvertiert ein rohes Image zu einr fixen VHD
+                und nennt sie zu new.vhd um
+ -l | -link     erstellt neues Differenz-VHD new.vhd und verknüpft es
+                mit dem übergeordneten Image parent.vhd
+ -f | -force    erzwingt, dass ein existierendes Image
+                überschrieben wird
+ -i | -info     zeigt nützliche Infos über das Image a.vhd
+ -m | -merge    Fasst delta.vhd mit dem übergeordneten Image
+                zusammen
+ new.vhd        Name des neuen dynamischen VHD-Images
+ size           Größe (eventuell mit Einheit,
+                Bytes, wenn keine Angabe)
+Beim Konvertieren eines rohen Images in ein fixes VHD, muss sichergestellt
+sein, dass es mit MBR-Schema im FAT-Format formatiert ist.
+Beim Erstellen eines dynamischen VHDs muss seine Größe
+zwischen 3 MB und 2040 GB liegen.
+Das erstellte dynamische VHD ist weder partitioniert noch formatiert:
+Um es einem Buchstaben zuzuweisen, anstelle von  ←[34;1mIMGMOUNT←[0m
+stattdessen ←[34;1mIMGMAKE←[0m benutzen.
+Der Schnappschuss einer VHD wird automatisch gelöscht,
+wenn das Image erfolgreich zusammengefasst wurde.
 
 .
 :SHELL_CMD_TREE_ERROR
@@ -1548,6 +1713,12 @@ Kann Ordner nicht anlegen - %s
 Ungültiger Pfad, kein Ordner oder Ordner nicht leer - %s
 
 .
+:SHELL_CMD_RMDIR_FULLTREE_CONFIRM
+Ordner "%s" und alle Unterordner löschen? (J/N)?
+.
+:SHELL_CMD_RMDIR_SINGLE_CONFIRM
+Datei "%s" löschen (J/N)?
+.
 :SHELL_CMD_RENAME_ERROR
 Kann nicht umbenennen - %s
 
@@ -1564,9 +1735,12 @@ Kann Attribute nicht ändern: %s
 Kann nicht löschen - %s
 
 .
+:SHELL_CMD_DEL_CONFIRM
+Lösche %s (J/N)?
+.
 :SHELL_CMD_DEL_SURE
 Alle Dateien im Ordner werden gelöscht!
-Ganz sicher [Y/N]?
+Ganz sicher [J/N]?
 .
 :SHELL_SYNTAXERROR
 Syntax-Fehler
@@ -1618,7 +1792,7 @@ Datei %s existiert bereits.
 
 .
 :SHELL_CMD_DIR_BYTES_USED
-%5d Datei(en) %15s Byte
+%5d Datei(en) %17s Byte
 
 .
 :SHELL_CMD_DIR_BYTES_FREE
@@ -1636,19 +1810,19 @@ Tippe ←[1;33mintro←[0m or ←[1;33mintro mount←[0m für mehr Information.
 
 .
 :SHELL_EXECUTE_DRIVE_ACCESS_CDROM
-Darf DOSBox-X auf das reale CD-ROM-Laufwerk %c zugreifen [Y/N]?
+Darf DOSBox-X auf das reale CD-ROM-Laufwerk %c zugreifen [J/N]?
 .
 :SHELL_EXECUTE_DRIVE_ACCESS_FLOPPY
-Darf DOSBox-X auf das reale Diskettenlaufwerk %c zugreifen [Y/N]?
+Darf DOSBox-X auf das reale Diskettenlaufwerk %c zugreifen [J/N]?
 .
 :SHELL_EXECUTE_DRIVE_ACCESS_REMOVABLE
-Darf DOSBox-X auf das reale entfernbare Laufwerk %c zugreifen [Y/N]?
+Darf DOSBox-X auf das reale entfernbare Laufwerk %c zugreifen [J/N]?
 .
 :SHELL_EXECUTE_DRIVE_ACCESS_NETWORK
-Darf DOSBox-X auf das reale Netzlaufwerk %c zugreifen [Y/N]?
+Darf DOSBox-X auf das reale Netzlaufwerk %c zugreifen [J/N]?
 .
 :SHELL_EXECUTE_DRIVE_ACCESS_FIXED
-Darf DOSBox-X auf die reale Festplatte %c zugreifen [Y/N]?
+Darf DOSBox-X auf die reale Festplatte %c zugreifen [J/N]?
 .
 :SHELL_EXECUTE_ILLEGAL_COMMAND
 Ungültiges Kommando oder Dateiname - "%s"
@@ -1685,6 +1859,10 @@ Nicht genügend Speicherplatz - %s
 Fehler beim Kopieren - %s
 
 .
+:SHELL_CMD_COPY_NOSELF
+Kann Datei nicht auf sich selbst kopieren♪
+
+.
 :SHELL_CMD_SUBST_DRIVE_LIST
 Diese lokalen Laufwerke sind aktuell eingehängt:
 
@@ -1716,6 +1894,9 @@ DOS/V V-Text ist momentan aktiviert.
 :SHELL_CMD_VTEXT_OFF
 DOS/V V-Text ist momentan deaktiviert.
 
+.
+:SHELL_ALLFILES_CHAR
+a
 .
 :SHELL_STARTUP_TITLE
 Willkommen zu DOSBox-X !
@@ -2381,6 +2562,11 @@ DX-CAPTURE [/V|/-V] [/A|/-A] [/M|/-M] [command] [options]
 Hiermit wird eine Video- oder Audio-Aufnahme vorbereitet,
 das Programm gestartet und beim Beenden des Programms die
 Aufnahme automatisch beendet.
+
+ /V für Video
+ /A für Audio
+ /M für Multi-track-Audio
+ /O für OPL FM (DROv2-Format)
 
 .
 :SHELL_CMD_DEBUGBOX_HELP
@@ -3426,7 +3612,7 @@ Pentium III
 Experimentell
 .
 :MENU:debug_pageflip
-Page flip Debugzeile
+Seitenumbruch Debugzeile
 .
 :MENU:debug_retracepoll
 Debugzeile zurückverfolgen
